# mayab-btc-arbitrage

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEMO_SCRIPT.md  Dockerfile  Dockerfile.testnet  FINAL_EVIDENCE.md  LICENSE  LIVE_READINESS.md  Makefile  README.md  RUNBOOK.md  SECURITY.md  TOP2_CHECKLIST.md  docker-compose.yml  fly.toml  go.mod  package-lock.json  package.json  playwright.config.js  render.yaml
.github/workflows/: benchmarks.yml  coverage.yml  release.yml  rust.yml  security.yml
cmd/mayab-arbitrage/: main.go
data/: captura_real.json
docs/: ADDING_EXCHANGE.md  ARCHITECTURE.md  COMPETITOR_AUDIT_2026-07-12.md  DESIGN_DECISIONS.md  EVIDENCE_MATRIX.md  OPERATIONS.md  QUANTITATIVE_EVIDENCE.md  RESPUESTA_AUDITORIA.md  SECURITY_MODEL.md  TESTNET_EXECUTION.md  TOP_TIER_UPGRADE.md  VIDEO_DEMO_SCRIPT.md  defensa-comite.md  openapi.yaml
docs/ADRs/: 0001-arbitraje-triangular.md  0001-architecture.md  0002-genetic-algorithm.md  0002-nsga-ii.md  0003-benchmark-rust-vs-node-php.md  (+1 more)
mayab-arbitrage/: Cargo.toml
mayab-arbitrage/benches/: corpus_scan_benchmark.rs  motor_benchmark.rs
mayab-arbitrage/src/: auditoria.rs  config.rs  discord.rs  estrategia.rs  evaluation.rs  ga.rs  impacto.rs  ledger_audit.rs  lib.rs  mercado.rs  metricas.rs  microestructura.rs  motor.rs  ou.rs  persistencia.rs  persistencia_timescale.rs  pnl_audit.rs  server.rs  tape.rs  testnet.rs  types.rs  version.rs
mayab-arbitrage/src/http/: auth.rs  dto.rs  error.rs  mod.rs  origin.rs  rate_limit.rs  router.rs
mayab-arbitrage/src/http/routes/: admin.rs  demo.rs  exports.rs  ga.rs  health.rs  jury.rs  metrics.rs  mod.rs  state.rs  websocket.rs
mayab-arbitrage/tests/: integration_test.rs
mayab-cli/: Cargo.toml
mayab-cli/src/: capture_tape.rs  main.rs  query_corpus.rs  testnet_executor.rs  verify_tape.rs
scripts/: benchmark-cloud-run-regions.sh  check-testnet-safety.sh  deploy-cloud-run.sh  generar-evidencia.sh  release-check.sh  run.sh  smoke-demo.sh  smoke-research-corpus.sh
src/: config.rs  ga.rs  main.rs  mercado.rs  motor.rs  persistencia.rs  server.rs  types.rs
(+37 files in other folders)
