[package]
name = "mayab-arbitrage"
version = "0.1.0"
edition = "2021"
description = "Demo segura de arbitraje BTC simulado con feeds publicos, API Axum y dashboard operativo."
license = "MIT"
publish = false
keywords = ["bitcoin", "arbitrage", "axum", "tokio", "simulation"]
categories = ["command-line-utilities", "simulation"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust_decimal = "1"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.12", features = ["serde"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.6", features = ["compression-gzip", "fs", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-postgres = { version = "0.7", optional = true }

[features]
timescaledb = ["dep:tokio-postgres"]

[dev-dependencies]
approx = "0.5"
tower = { version = "0.4", features = ["util"] }
criterion = "0.5"
